<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/ProfilesListFragment"
            android:icon="@drawable/ic_profiles"
            android:title="@string/sidebar_profiles" />
        <item
            android:id="@+id/OwnedMedicationsListFragment"
            android:icon="@drawable/ic_owned"
            android:title="@string/sidebar_my_medications" />
        <item
            android:id="@+id/MedicationsListFragment"
            android:icon="@drawable/ic_list"
            android:title="@string/medications_list" />

        <item
            android:id="@+id/OldTreatmentListFragment"
            android:icon="@drawable/ic_history"
            android:title="@string/sidebar_history" />
        <item
            android:id="@+id/QRFragment"
            android:icon="@drawable/ic_qr_code_scanner"
            android:title="@string/sidebar_qr" />
    </group>
</menu>