<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_shadowed"
    android:orientation="vertical">

    <LinearLayout style="@style/LinearLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|start"
            android:layout_weight="1"
            android:gravity="center_vertical|start"
            android:labelFor="@id/name"
            android:text="@string/label_name"
            android:textColor="@color/main"
            android:textSize="@dimen/subheading" />

        <EditText
            android:id="@+id/name"
            style="@style/EditText"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:text="@string/prescription_name_placeholder"
            android:textSize="@dimen/subheading" />
    </LinearLayout>

    <LinearLayout style="@style/LinearLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|start"
            android:layout_weight="1"
            android:gravity="center_vertical|start"
            android:labelFor="@id/gender"
            android:text="@string/label_diagnosis"
            android:textColor="@color/main"
            android:textSize="@dimen/subheading" />

        <EditText
            android:id="@+id/diagnosis"
            style="@style/EditText"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:text="@string/diagnosis_placeholder"
            android:textSize="@dimen/subheading" />
    </LinearLayout>

    <LinearLayout style="@style/LinearLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|start"
            android:layout_weight="1"
            android:gravity="center_vertical|start"
            android:labelFor="@id/birthday"
            android:text="@string/label_end_date"
            android:textColor="@color/main"
            android:textSize="@dimen/subheading" />

        <TextView
            android:id="@+id/end_date"
            style="@style/ClickableTextView"
            android:layout_width="250dp"
            android:text="@string/date_placeholder"
            android:textSize="@dimen/subheading" />
    </LinearLayout>

    <LinearLayout style="@style/LinearLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|start"
            android:layout_weight="1"
            android:gravity="center_vertical|start"
            android:labelFor="@id/birthday"
            android:text="@string/label_auto_disable"
            android:textColor="@color/main"
            android:textSize="@dimen/subheading" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/auto_off"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:checked="true"
            android:textOff="@string/cross"
            android:textOn="@string/check"
            app:showText="true"
            app:switchTextAppearance="@style/switchText"
            app:thumbTint="@color/primary" />
    </LinearLayout>

    <LinearLayout style="@style/LinearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:gravity="center_vertical|start"
            android:labelFor="@id/medications_list"
            android:text="@string/label_medications"
            android:textColor="@color/main"
            android:textSize="@dimen/subheading" />

        <ImageButton
            android:id="@+id/add_medication_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_add"
            android:tag="add_medication"
            android:textColor="@color/primary"
            android:textSize="@dimen/normal" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/medications_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        tools:itemCount="@integer/recycle_item_count"
        tools:listitem="@layout/block_medication_prescription" />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/background_second"
        android:tag="save"
        android:text="@string/save"
        android:textColor="@color/primary" />

</LinearLayout>