<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_authors"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color2"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.akzubarev.homedoctor.activities.InfoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color1"
        android:elevation="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color2"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:weightSum="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/info_app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/main"
            android:textSize="@dimen/dimen4" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/info_app_description"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/main"
            android:textSize="@dimen/dimen5" />

        <TextView
            android:id="@+id/version"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/info_version_placeholder"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/shadowed"
            android:textSize="@dimen/dimen5" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/info_hse"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/main"
            android:textSize="@dimen/dimen4" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/main"
            android:textSize="@dimen/dimen5" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/info_owner"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/main"
            android:textSize="@dimen/dimen4" />


        <TextView
            android:id="@+id/donate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/link"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColorLink="@color/additional"
            android:textSize="@dimen/dimen4"
            android:onClick="goToWeb"/>
            <!--  android:autoLink="all" -->
            <!--  that doesn't work somehow so we update the text from code -->
    </LinearLayout>
</LinearLayout>
